<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <FrameLayout
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:id="@+id/iv_sarmat_logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:transitionName="@string/transition_sarmat_logo"
                        android:contentDescription="@string/splash_sarmat_logo"
                        android:src="@drawable/sarmat" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_sarmat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginStart="@dimen/title_margin"
                    android:layout_marginEnd="@dimen/title_margin"
                    android:text="@string/splash_zhk_sarmat"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/main_title_size"
                    android:textAlignment="center"
                    android:transitionName="@string/transition_sarmat_title"
                    android:gravity="center" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/view_main_item"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
