<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <FrameLayout
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:padding="8dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="24dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/iv_about_agent_logo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitCenter"
                            android:transitionName="@string/transition_about_agent_logo"
                            android:contentDescription="@string/transition_about_agent_logo"
                            android:src="@drawable/agent_photo" />

                    </androidx.cardview.widget.CardView>

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_about_agent_title"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginStart="@dimen/title_margin"
                    android:layout_marginEnd="@dimen/title_margin"
                    android:text="@string/about_agent_title"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/main_title_size"
                    android:textAlignment="center"
                    android:transitionName="@string/transition_about_agent_title"
                    android:gravity="center" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/iv_about_agent_avatar"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="32dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:contentDescription="@string/transition_about_agent_logo"
                android:src="@drawable/agent_photo" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_about_agent_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:tint="@color/primary_color"
            android:src="@drawable/baseline_phone_24"
            android:alpha="0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/iv_about_agent_avatar"
            app:layout_constraintStart_toStartOf="parent"
            tools:alpha="1" />

        <TextView
            android:id="@+id/tv_about_agent_phone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:textColor="@color/secondary_text_color"
            android:text="@string/about_agent_phone"
            android:textSize="@dimen/about_text_size"
            android:typeface="monospace"
            android:alpha="0"
            tools:alpha="1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/iv_about_agent_phone"
            app:layout_constraintBottom_toBottomOf="@id/iv_about_agent_phone"
            app:layout_constraintStart_toEndOf="@id/iv_about_agent_phone" />

        <ImageView
            android:id="@+id/iv_about_agent_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:tint="@color/primary_color"
            android:src="@drawable/baseline_contact_mail_24"
            android:alpha="0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/iv_about_agent_phone"
            app:layout_constraintStart_toStartOf="parent"
            tools:alpha="1" />

        <TextView
            android:id="@+id/tv_about_agent_email"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:textColor="@color/secondary_text_color"
            android:text="@string/about_agent_email"
            android:textSize="@dimen/about_text_size"
            android:typeface="monospace"
            android:alpha="0"
            tools:alpha="1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/iv_about_agent_email"
            app:layout_constraintBottom_toBottomOf="@id/iv_about_agent_email"
            app:layout_constraintStart_toEndOf="@id/iv_about_agent_email" />

        <ImageView
            android:id="@+id/iv_about_agent_tg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:tint="@color/primary_color"
            android:src="@drawable/baseline_alternate_email_24"
            android:alpha="0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/iv_about_agent_email"
            app:layout_constraintStart_toStartOf="parent"
            tools:alpha="1" />

        <TextView
            android:id="@+id/tv_about_agent_tg"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:textColor="@color/secondary_text_color"
            android:text="@string/about_agent_tg"
            android:textSize="@dimen/about_text_size"
            android:typeface="monospace"
            android:alpha="0"
            tools:alpha="1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/iv_about_agent_tg"
            app:layout_constraintBottom_toBottomOf="@id/iv_about_agent_tg"
            app:layout_constraintStart_toEndOf="@id/iv_about_agent_tg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
